Update db contections

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,11 +18,11 @@
         series: [{
             name: 'Masculino',
             data: {{ masculino|safe }},
-            color: 'green'
+            color: 'blue'
         }, {
             name: 'Femenino',
             data: {{ femenino|safe}},
-            color: 'red'
+            color: 'pink'
         }]
     });
 
@@ -68,6 +68,7 @@
         </tr>
         </tfoot>
     </table>
+
 </div>
 
 
